# ftk

./: README.md  cli.py  pyproject.toml
commands/: stat.py
core/: fasta.py
ftk/core/: gc_peaks.py  stats.py
src/ftk/: cli.py
src/ftk/commands/: fishing.py  msaqc.py  stat.py
src/ftk/core/: fasta.py  fasta_reader.py  fishing.py  gc_peaks.py  msaqc.py  paf.py  stats.py
