[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftk"
version = "0.1.0"
description = "Extensible CLI toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
  "rich>=13.0",
  "rich-argparse>=1.4.0",
  "tqdm>=4.60",
  "scipy>=1.7",
  "numpy<2",
]

[project.optional-dependencies]
gmm = ["scikit-learn>=1.0"]

# Optional: prettier argparse help (colored/boxed) via rich-argparse
# Install with: pip install "ftk[help]"
help = ["rich-argparse>=1.4.0"]

[project.scripts]
ftk = "ftk.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ftk*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
